--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "marked": "^11.1.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
     "autoprefixer": "^10.4.16",
