--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "gray-matter": "^4.0.3",
     "marked": "^11.1.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
