--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
@@ -20,6 +21,8 @@
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
     "openapi-typescript-codegen": "^0.25.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
