--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "build": "^0.1.4",
     "gray-matter": "^4.0.3",
     "marked": "^11.1.0",
     "next": "^14.0.4",
     "qs": "^6.11.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
