--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.1",
     "build": "^0.1.4",
     "gray-matter": "^4.0.3",
@@ -16,8 +17,7 @@
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.33.1",
-    "yarn": "^1.22.22"
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
@@ -28,7 +28,6 @@
     "eslint-config-next": "14.0.4",
     "openapi-typescript-codegen": "^0.25.0",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6",
-    "typescript": "5.3.3"
+    "tailwindcss": "^3.3.6"
   }
 }
