--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "server-only": "^0.0.1",
     "sharp": "^0.33.1"
   },
   "devDependencies": {
