--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.1",
     "build": "^0.1.4",
     "gray-matter": "^4.0.3",
+    "gsap": "^3.12.5",
     "marked": "^11.1.0",
     "next": "^14.0.4",
     "qs": "^6.11.2",
