--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
 CMS_DOMAIN=https://next-reviews-cms.encoded.io
 CMS_BASE=https://next-reviews-cms.encoded.io/api
 #NEXT_PUBLIC_BASE_CMS=http://localhost:1337/api VISIBILITY=public
+DATABASE_URL="postgresql://postgres:postgres@localhost:5431/game"
