--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,12 @@ services:
     ports:
       - "1337:3000"
     command: server.js
+
+  postgres:
+    image: postgres:12
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+    ports:
+      - "5431:5432"
