--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.1",
+    "@prisma/client": "5.12.1",
     "build": "^0.1.4",
+    "formik": "^2.4.5",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.5",
     "marked": "^11.1.0",
@@ -30,6 +32,7 @@
     "eslint-config-next": "14.0.4",
     "openapi-typescript-codegen": "^0.25.0",
     "postcss": "^8.4.32",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.3.6"
   }
 }
