--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "cb" : "next build && next start",
+f    "cb": "next build && next start",
     "lint": "next lint"
   },
   "dependencies": {
