--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,19 +2,27 @@ version: '3.7'
 
 services:
 
+
+  postgres:
+    image: postgres:16-alpine
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: game
+    ports:
+      - "5431:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
   app:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
       - "1337:3000"
-    command: server.js
+    command: sh wait_for.sh postgres:5432 -- server.js
+    depends_on:
+      - postgres
 
-  postgres:
-    image: postgres:12
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
-    ports:
-      - "5431:5432"
+volumes:
+  postgres_data:
