--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.4.5",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.5",
+    "jose": "^5.2.4",
     "marked": "^11.1.0",
     "next": "^14.0.4",
     "qs": "^6.11.2",
