--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
       - "1337:3000"
     environment:
       - NODE_ENV=production
-    command: sh wait_for.sh postgres:5432 -- server.js
+    command: sh wait_for.sh postgres:5432 -- node /app/server.js
     depends_on:
       - postgres
 
@@ -33,4 +33,4 @@ services:
       dockerfile: migrate.Dockerfile
     depends_on:
       - postgres
-    command: sh wait_for.sh postgres:5432 -- sh -c "npx prisma migrate deploy"
+    command: sh wait_for.sh postgres:5432 -- sh -c "prisma migrate deploy"
