--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,4 +33,4 @@ services:
       dockerfile: migrate.Dockerfile
     depends_on:
       - postgres
-    command: sh wait_for.sh postgres:5432 -- sh -c "prisma migrate deploy"
+    command: sh wait_for.sh postgres:5432 -- sh -c "ls && prisma migrate deploy"
